    fields uniformly.

* docutils/transforms/misc.py:

  - Added misc.Transitions transform, extracted from
    universal.FinalChecks.

* docutils/transforms/references.py:

  - Added references.DanglingReferences transform, extracted from
    universal.FinalChecks.
  - Fixed bug with doubly-indirect substitutions.
  - Added footnote_reference classes attribute to "TargetNotes".

* docutils/transforms/universal.py:

  - Added universal.ExposeInternals transform, extracted from
    universal.FinalChecks.
  - Removed universal.FinalChecks transform (logic has been moved to
    several new transforms).
  - Fixed bug with the "expose_internals" setting and Text nodes
    (exposed by the "rawsource" internal attribute).
  - Added the universal.StripComments transform, implementation of the
    "strip_comments" setting.

* docutils/transforms/writer_aux.py: Added to project; auxiliary
  transforms for writers.

  - Added ``Compound`` transform, which flattens compound paragraphs.

* docutils/writers/: Several writer modules (html4css1.py) were
  converted into packages.  Support modules and data files have been
  moved into the packages.

  The stylesheets for the HTML writers are now installed along with
  the code, the code knows where to find them, and the default is to
  use them (actually, to embed them).  Some adjustments to
  configuration files may be necessary.  The easiest way to obtain the
  new default behavior is to remove all settings whose name includes
  "stylesheet".

* docutils/writers/__init__.py:

  - Added universal.Messages and universal.FilterMessages transforms
    as default transforms for all writers.
  - Added ``UnfilteredWriter`` base class for writers that pass the
    document tree on unchanged.

* docutils/writers/docutils_xml.py:

  - Made ``xmlcharrefreplace`` the default output encoding error
    handler.

* docutils/writers/html4css1/: 

  - Added support for image width and height units.